@@ -3,7 +3,6 @@
 rm -rf /pipeline/*.log
 rm -rf /var/log/*.gz
 rm -rf /var/log/*.0
-rm -rf /var/log/apache2/*
 rm -rf /var/log/apt/*
 rm -rf /var/log/debug
 rm -rf /var/log/auth.log
@@ -14,4 +13,4 @@ rm -rf /var/log/syslog
 rm -rf /var/log/user.log
 rm -rf /root/.bash_history
 rm -rf /usr/local/src/*
-rm -rf /pipeline/firstrun
+rm -rf /root/install.sh
