@@ -3,6 +3,7 @@
 * Add Hoptoad Notifier for exception handling.
 * Update reporter to check for stuck chunks every minute
 * Reporter sleeps for 1 second if there is no message
+* run the cleanup script by default after install
 
 *(November 14th, 2008)*
 
